<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mos.com.jalase2.ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="mos.com.jalase.detail"
        tools:showIn="@layout/activity_scrolling"
        android:orientation="vertical">


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:text="@string/mah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/hozor"
                />

            <TextView
                android:text="@string/jalase1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/hozor"
                android:id="@+id/jalase1"
                android:paddingStart="@dimen/column_margins"
                android:paddingEnd="@dimen/column_margins"/>

            <TextView
                android:text="@string/jalase2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/jalase1"
                android:id="@+id/jalase2"
                android:paddingStart="@dimen/column_margins"
                android:paddingEnd="@dimen/column_margins"/>

            <TextView
                android:text="@string/jalase3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/jalase2"
                android:id="@+id/jalase3"
                android:paddingStart="@dimen/column_margins"
                android:paddingEnd="@dimen/column_margins"/>

            <TextView
                android:text="@string/jalase4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/jalase3"
                android:id="@+id/jalase4"
                android:paddingStart="@dimen/column_margins"
                android:paddingEnd="@dimen/column_margins"/>

            <TextView
                android:text="@string/jalase5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/jalase4"
                android:id="@+id/jalase5"
                android:paddingStart="@dimen/column_margins"
                android:paddingEnd="@dimen/column_margins"/>

            <CheckBox
                android:text="h"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jalase1"
                android:layout_toEndOf="@+id/hozor"
                android:id="@+id/hozor1" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jalase2"
                android:layout_toEndOf="@+id/jalase1"
                android:id="@+id/hozor2" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jalase3"
                android:layout_toEndOf="@+id/jalase2"
                android:id="@+id/hozor3" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jalase4"
                android:layout_toEndOf="@+id/jalase3"
                android:id="@+id/hozor4" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/jalase5"
                android:layout_toEndOf="@+id/jalase4"
                android:id="@+id/hozor5" />

            <CheckBox
                android:text="+"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hozor1"
                android:layout_toEndOf="@+id/hozor"
                android:id="@+id/mosbat1" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hozor2"
                android:layout_toEndOf="@+id/jalase1"
                android:id="@+id/mosbat2" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hozor3"
                android:layout_toEndOf="@+id/jalase2"
                android:id="@+id/mosbat3" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hozor4"
                android:layout_toEndOf="@+id/jalase3"
                android:id="@+id/mosbat4" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/hozor5"
                android:layout_toEndOf="@+id/jalase4"
                android:id="@+id/mosbat5" />

            <CheckBox
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mosbat1"
                android:layout_toEndOf="@+id/hozor"
                android:id="@+id/manfi1" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mosbat2"
                android:layout_toEndOf="@+id/jalase1"
                android:id="@+id/manfi2" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mosbat3"
                android:layout_toEndOf="@+id/jalase2"
                android:id="@+id/manfi3" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mosbat4"
                android:layout_toEndOf="@+id/jalase3"
                android:id="@+id/manfi4" />

            <CheckBox
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mosbat5"
                android:layout_toEndOf="@+id/jalase4"
                android:id="@+id/manfi5" />
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Name"
            android:ems="10"
            android:id="@+id/editText" />


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
